# aoc-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc_2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.py  template.py  utils.py
aoc_2024/inputs/: stub.txt
