[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Daniel Horton <dancrhorton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
loguru = "^0.7.3"
numpy = "^2.1.3"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
