[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Daniel Horton <dancrhorton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
loguru = "^0.7.3"
numpy = "^2.1.3"
scipy = "^1.14.1"


[tool.ruff]
line-length = 120
indent-width = 4


[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
fixable = ["ALL"]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "S101",
    "PERF",
    "FA102",
    "PTH",
    "PLR2004",
    "S311",
    "FBT",
    "D211"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
